--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@
   color: #61dafb;
 }
 
+.MuiTypography-body1 {
+font-family: Product Sans remote;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
