--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,54 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Product Sans remote;
+}
+
+h1 {
+  font-family: Product Sans Bold;
+  font-weight: 100;
+  color: #5072e8;
+}
+
+h3 {
+  font-family: Product Sans regular;
+  font-weight: 70;
+  /*color: #5072e8;*/
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  line-height: 0px;
+}
+
+li {
+  font-family: Roboto;
+}
+
+@font-face {
+  font-family: "Product Sans remote";
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2)
+    format("woff2");
+}
+
+
+/* 
+@font-face {
+  font-family: "Product Sans Regular";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./assets/product-sans/Product\ Sans\ Regular.ttf");
+}
+
+@font-face {
+  font-family: "Product Sans Bold";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./assets/product-sans/Product\ Sans\ Bold.ttf");
+} */
